--- a/absensi.html
+++ b/absensi.html
@@ -18,5 +18,120 @@
 <td>Andi Ikram Maulana</td>
 </tr>
 <tr>
-<
+<th>3</th>
+<td>1154015</td>
+<td>Bendra Wardana</td>
+</tr>
+<tr>
+<th>4</th>
+<td>1154038</td>
+<td>Cahya Kurniawan</td>
+</tr>
+<tr>
+<th>5</th>
+<td>1154030</td>
+<td>Doni Saputra</td>
+</tr>
+<tr>
+<th>6</th>
+<td>1154076</td>
+<td>Ikhsan Abdul Hadi Nugraha</td>
+</tr>
+<tr>
+<th>7</th>
+<td>1154071</td>
+<td>Librantara Erlangga</td>
+</tr>
+<tr>
+<th>8</th>
+<td>1154090</td>
+<td>Mohammad Nurhalim</td>
+</tr>
+<tr>
+<th>9</th>
+<td>1154087</td>
+<td>Muhammad Nur Ikhsan</td>
+</tr>
+<tr>
+<th>10</th>
+<td>1154037</td>
+<td>Rahmat Hidayatulloh</td>
+</tr>
+<tr>
+<th>11</th>
+<td>1154067</td>
+<td>Ryan Hafizh Herdiana</td>
+</tr>
+<tr>
+<th>12</th>
+<td>1154034</td>
+<td>Wahyu Maruti Ajdie</td>
+</tr>
+<tr>
+<th>13</th>
+<td>1154092</td>
+<td>Andi Syahjaratu Daur</td>
+</tr>
+<tr>
+<th>14</th>
+<td>1154022</td>
+<td>Ayu Permata Sari</td>
+</tr>
+<tr>
+<th>15</th>
+<td>1154039</td>
+<td>Dini Islamiani Lestari</td>
+</tr>
+<tr>
+<th>16</th>
+<td>1154053</td>
+<td>Ika Syam Setiawan</td>
+</tr>
+<tr>
+<th>17</th>
+<td>1154060</td>
+<td>Maudy Khaula Putri</td>
+</tr>
+<tr>
+<th>18</th>
+<td>1154027</td>
+<td>Rafikatul Hikmah</td>
+</tr>
+<tr>
+<th>19</th>
+<td></td>
+<td>Adityo Cahyo Nugroho</td>
+</tr>
+<tr>
+<th>20</th>
+<td></td>
+<td>Emy Safitri</td>
+</tr>
+<tr>
+<th>21</th>
+<td></td>
+<td>Ilman Mubarik Sidiq</td>
+</tr>
+<tr>
+<th>22</th>
+<td></td>
+<td>Putri Aulia Ramadhanie</td>
+</tr>
+<tr>
+<th>23</th>
+<td></td>
+<td>Silvy Dharma Febryana</td>
+</tr>
+<tr>
+<th>24</th>
+<td>1154062</td>
+<td>Widi Damayanti</td>
+</tr>
+<tr>
+<th>25</th>
+<td></td>
+<td>Nur Rahmawati</td>
+</tr>
+<tr>
+<th>
 
