--- a/absensi.html
+++ b/absensi.html
@@ -1,4 +1,5 @@
 <html>
+<marquee>ABSENSI KELAS</marquee>
 <title>Absensi Siswa</title>
 <body>
 <table border="1">
@@ -132,5 +133,15 @@
 <td></td>
 <td>Nur Rahmawati</td>
 </tr>
-<tr>.........
-
+<tr>
+<th>26</th>
+<td></td>
+<td>Martin Luter Zega</td>
+</tr>
+<tr>
+<th>27</th>
+<td></td>
+<td>M Rico Faros</td>
+</tr>
+</table>
+</html>
